testimonial and client section added

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import "./tailwind/index";
 @import "./base/index";
 @import "./animation/index";
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "./swiper/index";
 
 * {
   scroll-behavior: smooth;
