--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -15,4 +15,18 @@ $black-opacity: rgba(
   --shadow-color: #e8eae2;
   --redish-white: #f7f7f7;
   --black-opacity: $black-opacity;
+  --facebook-blue: #4064ac;
+  --linkedin-blue: #0077b5;
+  --instagram-pink: #e33f5f;
+}
+
+.insta-bg {
+  background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%),
+    radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
+    radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
+    radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%),
+    radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
+    radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%),
+    radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),
+    linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
 }
