--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -2,6 +2,7 @@
 @import "./base/index";
 @import "./animation/index";
 @import "./swiper/index";
+@import "./ui/index.scss";
 
 * {
   scroll-behavior: smooth;
